--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "nodemon": "^2.0.13"
   },
   "dependencies": {
+    "-": "^0.0.1",
+    "@angular/cli": "^12.2.8",
     "bcrypt-nodejs": "0.0.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "g": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.7",
     "mongoose-unique-validator": "^2.0.3",
