--- a/client/coolProject/package.json
+++ b/client/coolProject/package.json
@@ -28,7 +28,9 @@
     "@angular-devkit/build-angular": "~12.2.8",
     "@angular/cli": "~12.2.8",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/bootstrap": "^5.1.6",
     "@types/jasmine": "~3.8.0",
+    "@types/jquery": "^3.5.6",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
